@@ -11,3 +11,5 @@ I am interested for [[todo/mbox]] --[[DavidBremner]]
 >> I don't think `ip()` and `user()` necessarily make sense for a mail box 
 >> that is already on the disk, so no, I don't think I'll miss
 >> them. --[[DavidBremner]] 
+
+>>> Done, [[plugins/filecheck]] --[[Joey]]
