@@ -14,6 +14,8 @@ ikiwiki (2.62) UNRELEASED; urgency=low
     chain will be used. (willu)
   * Drop suggests on texlive-science, add suggests on dvipng.
   * listdirectives: New plugin. (willu)
+  * filecheck: New plugin factoring out the PageSpec additions that were
+    originally part of the attachment plugin.
 
  -- Joey Hess <joeyh@debian.org>  Thu, 21 Aug 2008 16:20:58 -0400
 
